Added some components

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700&display=swap');
 @import './assets/colors.scss';
+
 
 * {
   box-sizing: border-box;
+
+  body {
+    margin: 0;
+    padding: 0;
+    background: $color1;
+    margin: 0 auto;
+    font-family: 'Mulish';
+  }
+
+  .section-container {
+    max-width: 1200px;
+    padding: 0 5%;
+    margin: 0 auto;
+  }
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  background: $color1;
-  margin: 0 auto;
-}
+
