--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -3,6 +3,33 @@
 .header {
    height: 60px;
    width: 100%;
-   padding: 0 5%;
    background-color: $color3;
+
+   .section-container {
+      align-items: center;
+      display: flex;
+      height: 100%;
+      justify-content: space-between;
+
+      img {
+         width: 30%;
+         min-width: 250px;
+      }
+
+      ul {
+         list-style: none;
+         display: flex;
+         flex-wrap: nowrap;
+
+         li {
+            display: inline-flex;
+            flex-wrap: nowrap;
+            margin: 0 10px;
+
+            a {
+               color: #fff;
+            }
+         }
+      }
+   }
 }
