--- a/src/components/NewExpenses/NewExpenseForm.scss
+++ b/src/components/NewExpenses/NewExpenseForm.scss
@@ -1,33 +1,99 @@
 @import '../../assets/colors.scss';
 
 .new-expense-form {
-    background: $color3;
-    padding: 40px;
-    margin-top: 30px;
-    border-radius: 5px;
-    color: white;
-    font-family: inherit;
+   background: $color3;
+   padding: 40px;
+   margin-top: 30px;
+   border-radius: 5px;
+   color: white;
+   font-family: inherit;
 
-    .inputs {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
+   form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+      .inputs {
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: space-between;
+         width: 100%;
 
-        .form-control {
+         .form-control {
             display: flex;
             align-items: center;
-            width: 100%;
+            margin-bottom: 30px;
 
             label {
-                margin-right: 10px;
-                font-weight: 600;
+               margin-right: 10px;
+               font-weight: 600;
             }
 
             input {
-                width: 100%;
-                height: 30px;
-                padding: 10px;
+               width: 250px;
+               height: 35px;
+               padding: 10px;
             }
+         }
+      }
+      button {
+         width: 300px;
+         height: 50px;
+         justify-self: center;
+         font-family: inherit;
+         font-weight: 700;
+         background-color: $color5;
+         color: white;
+         border: none;
+         border-radius: 5px;
+         font-size: 1.1rem;
+         cursor: pointer;
+         
+         
+       }
+       button:active {
+        transform: scale(98%);
+         
+      }
+
+    
+   }
+}
+
+
+@media (max-width: 1100px) {
+    .new-expense-form {
+       
+     
+        form {
+        
+         
+           .inputs {
+             justify-content: space-evenly;
+     
+              .form-control {
+                
+     
+                 label {
+                 
+                 }
+     
+                 input {
+                    
+                 }
+              }
+           }
+           button {
+              
+              
+              
+            }
+            button:active {
+             
+           }
+     
+         
         }
-    }
+     }
 }
