--- a/src/components/Expenses/Expense.scss
+++ b/src/components/Expenses/Expense.scss
@@ -1,23 +1,1 @@
-@import '../../assets/colors.scss';
-
-.expenses-item {
-    background-color: $color2;
-    border-radius: 6px;
-    display: flex;
-    box-shadow: 0px 5px 10px rgba($color: #000000, $alpha: 0.1);
-    margin-top: 20px;
-
-    .title {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
-        margin: 0 30px;
-        align-items: center;
-        color: $color3;
-
-        h1 {
-            font-size: 1.3rem;
-            font-weight: 900;
-        }
-    }
-}
+@import '../../assets/colors.scss'
